syntax = "proto3";

package org.project_planton.shared.relationship.v1;

import "buf/validate/validate.proto";
import "google/protobuf/descriptor.proto";
import "org/project-planton/shared/cloudresourcekind/cloud_resource_kind.proto";

// CloudResourceRelationship defines a relationship between two cloud resources.
message CloudResourceRelationship {
  // Type of relationship between the resources.
  enum RelationshipType {
    unspecified = 0;
    // The resource depends on the related resource.
    depends_on = 1;
    // The resource runs on the related resource.
    runs_on = 2;
    // The resource is managed by an operator/controller.
    managed_by = 3;
    // The resource consumes another resource.
    uses = 4;
  }
  // Kind of the related resource.
  org.project_planton.shared.cloudresourcekind.CloudResourceKind kind = 1 [(buf.validate.field).required = true];
  // Environment of the related resource.
  string env = 2;
  // Name of the related resource.
  string name = 3 [(buf.validate.field).required = true];
  // Type of relationship between the resources.
  RelationshipType type = 4 [(buf.validate.field).required = true];
  // Optional group to further categorize the relationship.
  string group = 5;
}
