syntax = "proto3";

package org.project_planton.provider.gcp.gcpcloudrun.v1;

import "buf/validate/validate.proto";
import "org/project_planton/shared/options/options.proto";

/*
 * GcpCloudRunSpec defines the configuration for deploying an HTTP service on
 * Google Cloud Run.  Container-related knobs are grouped under the
 * GcpCloudRunContainer message to keep naming and structure consistent with
 * MicroserviceKubernetes and AwsEcsService resources.
 */
message GcpCloudRunSpec {
  // GCP project ID where the Cloud Run service will be created.
  string project_id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string = {pattern: "^[a-z][a-z0-9-]{4,28}[a-z0-9]$"}
  ];

  // Region where the service is deployed, for example "us-central1".
  string region = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string = {pattern: "^[a-z]+-[a-z]+[0-9]$"}
  ];

  // Name of the Cloud Run service to create on GCP.
  // If not specified, defaults to metadata.name.
  string service_name = 7 [
    (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE,
    (buf.validate.field).string = {
      pattern: "^[a-z0-9]([-a-z0-9]*[a-z0-9])?$"
      max_len: 63
    }
  ];

  // Service account email that the Cloud Run service runs as.
  // If not specified, uses the default Compute Engine service account.
  string service_account = 8 [
    (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE,
    (buf.validate.field).string = {pattern: "^[a-z0-9]([-a-z0-9]*[a-z0-9])?@[a-z0-9-]+\\.iam\\.gserviceaccount\\.com$"}
  ];

  // Container configuration for the Cloud Run service.
  GcpCloudRunContainer container = 3 [(buf.validate.field).required = true];

  // Maximum concurrent requests handled by one instance.
  int32 max_concurrency = 4 [
    (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE,
    (buf.validate.field).int32 = {
      gte: 1
      lte: 1000
    },
    (org.project_planton.shared.options.recommended_default) = "80"
  ];

  // Request timeout in seconds (1-3600). Default is 300 (5 minutes).
  int32 timeout_seconds = 9 [
    (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE,
    (buf.validate.field).int32 = {
      gte: 1
      lte: 3600
    },
    (org.project_planton.shared.options.recommended_default) = "300"
  ];

  // Ingress settings control which traffic sources can reach the service.
  GcpCloudRunIngress ingress = 10 [(org.project_planton.shared.options.recommended_default) = "INGRESS_TRAFFIC_ALL"];

  // If true, the service is publicly invokable by unauthenticated callers.
  bool allow_unauthenticated = 5 [(org.project_planton.shared.options.recommended_default) = "true"];

  // VPC access configuration for private resource access.
  GcpCloudRunVpcAccess vpc_access = 11;

  // Execution environment generation (GEN1 or GEN2).
  // GEN2 offers full Linux compatibility but slower cold starts.
  GcpCloudRunExecutionEnvironment execution_environment = 12 [(org.project_planton.shared.options.recommended_default) = "EXECUTION_ENVIRONMENT_GEN2"];

  // Custom DNS mapping for the Cloud Run service.
  GcpCloudRunDns dns = 6;
}

/*
 * GcpCloudRunContainer groups image, resources, environment, and port settings
 * for the Cloud Run container.
 */
message GcpCloudRunContainer {
  // Container image URI, for example "us-docker.pkg.dev/prj/registry/app:1.0.0".
  GcpCloudRunContainerImage image = 1;

  // Environment variables and secrets injected into the container.
  GcpCloudRunContainerEnv env = 2;

  // Container port that receives HTTP traffic.  Defaults to 8080 if unset.
  int32 port = 3 [(buf.validate.field).int32 = {
    gte: 1
    lte: 65535
  }];

  // vCPU units allocated per instance.  Allowed values: 1, 2, 4.
  int32 cpu = 4 [
    (buf.validate.field).required = true,
    (buf.validate.field).int32 = {
      in: [
        1,
        2,
        4
      ]
    },
    (org.project_planton.shared.options.recommended_default) = "1"
  ];

  // Memory in MiB allocated per instance.  Valid range 128 â€“ 32768.
  int32 memory = 5 [
    (buf.validate.field).required = true,
    (buf.validate.field).int32 = {
      gte: 128
      lte: 32768
    },
    (org.project_planton.shared.options.recommended_default) = "512"
  ];

  // Minimum and maximum number of container instances.
  GcpCloudRunContainerReplicas replicas = 6 [(buf.validate.field).required = true];
}

/// GcpCloudRunContainerReplicas defines the minimum and maximum number of container instances
message GcpCloudRunContainerReplicas {
  // Minimum number of container instances that remain warm.
  int32 min = 1 [
    (buf.validate.field).int32 = {gte: 0},
    (org.project_planton.shared.options.recommended_default) = "0"
  ];

  // Maximum number of container instances Cloud Run may scale out to.
  int32 max = 2 [(buf.validate.field).int32 = {gte: 0}];
}

/*
 * GcpCloudRunContainerImage specifies the repository and tag of the container
 * image.
 */
message GcpCloudRunContainerImage {
  // Image repository, for example "us-docker.pkg.dev/prj/registry/app".
  string repo = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string = {min_len: 1}
  ];

  // Image tag, for example "1.0.0".  Using a fixed tag improves repeatability.
  string tag = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string = {min_len: 1}
  ];
}

/*
 * GcpCloudRunContainerEnv defines plain environment variables and secrets.
 */
message GcpCloudRunContainerEnv {
  // Plain environment variables injected as KEY=VALUE pairs.
  map<string, string> variables = 1;

  // Secret Manager references injected as KEY=projects/*/secrets/*:version.
  map<string, string> secrets = 2;
}

/*
 * GcpCloudRunDns configures optional custom-domain mapping.
 */
message GcpCloudRunDns {
  // Enables or disables custom-domain mapping.
  bool enabled = 1;

  // Fully-qualified hostnames routed to the Cloud Run service.
  repeated string hostnames = 2 [
    (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE,
    (buf.validate.field).repeated = {
      unique: true
      items: {
        string: {pattern: "^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$"}
      }
    }
  ];

  // Cloud DNS managed zone used for domain-verification records.
  string managed_zone = 3;

  option (buf.validate.message).cel = {
    id: "dns.enabled-requires-fields"
    message: "hostnames and managed_zone must be set when dns.enabled is true"
    expression: "!this.enabled || (size(this.hostnames) > 0 && this.managed_zone != '')"
  };
}

/*
 * GcpCloudRunIngress controls which traffic sources can reach the service.
 */
enum GcpCloudRunIngress {
  // Unspecified, defaults to INGRESS_TRAFFIC_ALL
  INGRESS_TRAFFIC_UNSPECIFIED = 0;

  // Accept traffic from all sources (public internet)
  INGRESS_TRAFFIC_ALL = 1;

  // Accept traffic only from other Cloud Run services and Eventarc events
  INGRESS_TRAFFIC_INTERNAL_ONLY = 2;

  // Accept traffic from internal sources and Cloud Load Balancing
  INGRESS_TRAFFIC_INTERNAL_LOAD_BALANCER = 3;
}

/*
 * GcpCloudRunExecutionEnvironment defines the execution environment generation.
 */
enum GcpCloudRunExecutionEnvironment {
  // Unspecified, defaults to GEN2
  EXECUTION_ENVIRONMENT_UNSPECIFIED = 0;

  // First generation execution environment
  EXECUTION_ENVIRONMENT_GEN1 = 1;

  // Second generation execution environment (full Linux compatibility)
  EXECUTION_ENVIRONMENT_GEN2 = 2;
}

/*
 * GcpCloudRunVpcAccess configures Direct VPC Egress for accessing private resources.
 */
message GcpCloudRunVpcAccess {
  // VPC network name for Direct VPC Egress
  string network = 1 [
    (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE,
    (buf.validate.field).string = {min_len: 1}
  ];

  // VPC subnet name for Direct VPC Egress
  string subnet = 2 [
    (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE,
    (buf.validate.field).string = {min_len: 1}
  ];

  // Egress setting: "ALL_TRAFFIC" or "PRIVATE_RANGES_ONLY"
  // If "ALL_TRAFFIC", all egress goes through VPC
  // If "PRIVATE_RANGES_ONLY", only private IP traffic uses VPC
  string egress = 3 [
    (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE,
    (buf.validate.field).string = {
      in: [
        "",
        "ALL_TRAFFIC",
        "PRIVATE_RANGES_ONLY"
      ]
    }
  ];
}
