syntax = "proto3";

package org.project_planton.provider.kubernetes.addon.certmanager.v1;

// Outputs emitted after cert‑manager installation.
message CertManagerStackOutputs {
  // Kubernetes namespace where cert‑manager was deployed.
  string namespace = 1;
  // Helm release name (useful for upgrades).
  string release_name = 2;
  // The service account e‑mail/ARN/ClientID used for DNS‑01 solver.
  string solver_identity = 3;
  // The name of the Kubernetes Secret containing the Cloudflare API token (only set for Cloudflare configs).
  string cloudflare_secret_name = 4;
}
