syntax = "proto3";

package org.project_planton.provider.kubernetes.addon.kubernetescertmanager.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/kubernetes/kubernetescertmanager/v1/spec.proto";
import "org/project_planton/provider/kubernetes/kubernetescertmanager/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//kubernetes-cert-manager
message KubernetesCertManager {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'KubernetesCertManager'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  KubernetesCertManagerSpec spec = 4 [(buf.validate.field).required = true];

  //status
  KubernetesCertManagerStatus status = 5;
}

//kubernetes-cert-manager status.
message KubernetesCertManagerStatus {
  //stack-outputs
  KubernetesCertManagerStackOutputs outputs = 1;
}
