syntax = "proto3";

package org.project_planton.provider.kubernetes.kubernetescertmanager.v1;

import "org/project_planton/provider/kubernetes/kubernetescertmanager/v1/api.proto";
import "org/project_planton/provider/kubernetes/provider.proto";

//input for kubernetes-cert-manager stack
message KubernetesCertManagerStackInput {
  //target cloud-resource
  KubernetesCertManager target = 1;
  //provider-config
  org.project_planton.provider.kubernetes.KubernetesProviderConfig provider_config = 2;
}
