syntax = "proto3";

package org.project_planton.provider.kubernetes.workload.helmrelease.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/kubernetes/workload/helmrelease/v1/spec.proto";
import "org/project_planton/provider/kubernetes/workload/helmrelease/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//helm-release
message HelmRelease {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'HelmRelease'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  HelmReleaseSpec spec = 4 [(buf.validate.field).required = true];

  //status
  HelmReleaseStatus status = 5;
}

//helm-release status.
message HelmReleaseStatus {
  //stack-outputs
  // helm-release stack-outputs
  HelmReleaseStackOutputs outputs = 1;
}
