syntax = "proto3";

package project.planton.shared.iac.terraform;

import "buf/validate/validate.proto";
import "project/planton/shared/iac/iacgitrepo/iac_git_repo.proto";

//Terraform stack info
message TerraformStackInfo {
  //terraform stack operations
  repeated TerraformStackOperation operations = 1;
  //terraform backend
  TerraformBackend backend = 2;
  //iac-module git-repo
  project.planton.shared.iac.iacgitrepo.IacGitRepo git_repo = 3;
}

//terraform backend type
enum TerraformBackendType {
  // Unspecified or unknown backend type.
  terraform_backend_type_unspecified = 0;

  // Local filesystem backend (the default if none is configured).
  local = 1;

  // Amazon S3-based backend for remote state storage.
  s3 = 2;

  // Google Cloud Storage backend for storing state.
  gcs = 3;

  // Azure Resource Manager backend using Azure Blob Storage.
  azurerm = 4;
}

// terraform operation type
// the recommended best practice to prefix the entry with enum name has been intentionally ignored
// to allow users to specify a user-friendly name in the input.
enum TerraformOperationType {
  terraform_operation_type_unspecified = 0;
  init = 1;
  refresh = 2;
  plan = 3;
  apply = 4;
  destroy = 5;
}

//terraform-backend-credential spec
// These credentials are used for managing Terraform state storage, which can be configured for different cloud providers or local environments.
// For example, these credentials can be used to store state files in AWS S3, Google Cloud Storage, Azure Blob Storage, or locally on the file system.
// Properly configuring these backends is essential for managing and maintaining infrastructure state efficiently.
message TerraformBackend {
  //terraform backend type
  TerraformBackendType type = 1 [
    (buf.validate.field).required = true
  ];

  option (buf.validate.message).cel = {
    id: "s3.required",
    expression: "this.type == 2 && !has(this.s3)"
        "? 's3 details is mandatory when provider is s3'"
        ": ''"
  };
  // s3 backend spec
  TerraformS3Backend s3 = 2;

  option (buf.validate.message).cel = {
    id: "gcs.required",
    expression: "this.type == 3 && !has(this.gcs)"
        "? 'gcs details is mandatory when provider is gcs'"
        ": ''"
  };
  // gcs backend spec
  TerraformGcsBackend gcs = 3;

  option (buf.validate.message).cel = {
    id: "azurerm.required",
    expression: "this.type == 4 && !has(this.azurerm)"
        "? 'azurerm details is mandatory when provider is azurerm'"
        ": ''"
  };
  // azure-blob-storage backend spec
  TerraformAzurermBackend azurerm = 4;
}

// terraform stack operation
message TerraformStackOperation {
  //terraform operation
  TerraformOperationType operation = 1;
  //run preview of terraform operation
  bool preview = 2;
}


//terraform-backend-credential spec for aws-s3 backend
//https://developer.hashicorp.com/terraform/language/backend/s3
message TerraformS3Backend {
  //name of s3-bucket
  string bucket = 1  [
    (buf.validate.field).required = true
  ];
  //aws-access-key-id
  string aws_access_key_id = 2 [
    (buf.validate.field).required = true
  ];
  //aws-secret-access-key
  string aws_secret_access_key = 3 [
    (buf.validate.field).required = true
  ];
  //aws-region
  string region = 4 [
    (buf.validate.field).required = true
  ];
  //dynamodb-table for state locking
  //this is optional, but recommended for production environments
  string dynamodb_table = 5;
}

//terraform-backend-credential spec for google-cloud-storage backend
//https://developer.hashicorp.com/terraform/language/backend/gcs
message TerraformGcsBackend {
  //name of gcs-bucket
  string gcs_bucket = 1  [
    (buf.validate.field).required = true
  ];
  //base64 encoded gcp service-account-key json
  string service_account_key_base64 = 2  [
    (buf.validate.field).required = true
  ];
}

//terraform-backend-credential spec for azure-blob-storage backend
// https://developer.hashicorp.com/terraform/language/backend/azurerm
message TerraformAzurermBackend {
  //azure resource-group-name
  string resource_group_name = 1  [
    (buf.validate.field).required = true
  ];
  //azure storage-account-name
  string storage_account_name = 2  [
    (buf.validate.field).required = true
  ];
  //container name
  string container_name = 3 [
    (buf.validate.field).required = true
  ];
  // The Azure Client ID, which is used to identify the application making requests to Azure services.
  // This is a required field, and it must be a valid non-empty string.
  string client_id = 4 [
    (buf.validate.field).required = true
  ];

  // The Azure Client Secret, which is used to authenticate the application with Azure services.
  // This is a required field, and it must be a valid non-empty string.
  string client_secret = 5 [
    (buf.validate.field).required = true
  ];

  // The Azure Tenant ID, which uniquely identifies the Azure Active Directory (AAD) tenant.
  // This is a required field, and it must be a valid non-empty string.
  string tenant_id = 6 [
    (buf.validate.field).required = true
  ];

  // The Azure Subscription ID, which uniquely identifies the Azure subscription.
  // This is a required field, and it must be a valid non-empty string.
  string subscription_id = 7 [
    (buf.validate.field).required = true
  ];
}
